(feature) links to results from timeline
- adds two (dummy) links to the timeline to survey results
- overrides styles in the `<head>` of the page
- also removes a lot of cruft from the page

--- a/app/views/leave-feedback/results/123456-greenwood-high-1.html
+++ b/app/views/leave-feedback/results/123456-greenwood-high-1.html
@@ -4,51 +4,22 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="https://reports.ofsted.gov.uk/css/style.css" />
-  <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="https://reports.ofsted.gov.uk/images/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="eGMS.accessibility" scheme="WCAG" content="Double-A">
-  <meta name="dcterms.date" content="2018-12-28T12:09:24+00:00">
-  <meta name="dcterms.creator" content="Ofsted Communications Team. enquiries@ofsted.gov.uk">
-  <meta name="dcterms.publisher" content="Ofsted. enquiries@ofsted.gov.uk">
-  <meta name="dc.keywords" content="Find an inspection report and registered childcare">
-  <meta name="dc.description" content="Find an inspection report and registered childcare">
-  <meta name="dc.title" content="Find an inspection report and registered childcare">
-  <meta name="dc.subject" scheme="IPSV" content="Education and training, adult and community learning, schools, colleges, further education, childminders, nurseries, children's homes, fostering and adoption">
-  <meta name="dc.subject" scheme="ofsted" content="Inspection reports and registered childcare">
-  <meta name="dc.language" scheme="ISO 639-2/T" content="eng">
-  <meta name="dc.identifier" content="http://reports.ofsted.gov.uk/inspection-reports/find-inspection-report/provider/CARE/RP523142">
-  <meta name="dc.date.created" scheme="W3CDTF" content="2018-12-28T12:09:24+00:00">
-  <meta name="dc.date.modified" scheme="W3CDTF" content="2018-12-28T12:09:24+00:00">
-  <meta name="google-site-verification" content="zcTRll6V6a-_a6iLUbUcJC3FnbpUtg87OHJinysdsSM">
-  <link rel="canonical" href="http://reports.ofsted.gov.uk/inspection-reports/find-inspection-report">
-  <title>Ofsted | St George's Infant School and Nursery</title>
-  <!-- Google Tag Manager -->
-  <script>
-  (function(w, d, s, l, i) {
-    w[l] = w[l] || [];
-    w[l].push({
-      'gtm.start': new Date().getTime(),
-      event: 'gtm.js'
-    });
-    var f = d.getElementsByTagName(s)[0],
-      j = d.createElement(s),
-      dl = l != 'dataLayer' ? '&l=' + l : '';
-    j.async = true;
-    j.src =
-      'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-    f.parentNode.insertBefore(j, f);
-  })(window, document, 'script', 'dataLayer', 'GTM-5PVKJ5D');
-  </script>
-  <!-- End Google Tag Manager -->
+  <title>Ofsted</title>
+
+  <style>
+    .timeline .event.result .publication-link::before {
+      background: none;
+      content: "🔗";
+      padding-left: 0;
+      margin-right: 1px;
+      color: #000;
+    }
+  </style>
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5PVKJ5D" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-  </noscript>
-  <!-- End Google Tag Manager (noscript) -->
   <script>
   document.body.className = document.body.className + ' js-enabled';
   </script>
@@ -119,11 +90,8 @@
                 <summary><span class="expander-see-more btn-nostyle">How long until the next inspection?</span></summary>
                 <div class="next-inspection__content">
                   <p dir="ltr">Schools that require improvement are normally inspected within 30 months of the latest inspection report. They may also receive monitoring visits.</p>
-
                   <p>We can also inspect at any time if we have concerns.</p>
-
                   <p>We normally give notice the afternoon of the working day before an inspection. We can also inspect schools without notice.</p>
-
                 </div>
               </details>
 
@@ -132,25 +100,45 @@
                 <p><a href="#" class="email-alerts">Get email alerts</a> when we publish a new report</p>
                 <ol class="timeline">
 
-                  <li class="timeline__day        ">
-                    <div class="event">
+                  <li class="timeline__day">
+                    <div class="event result">
 
                       <p class="timeline__date">
-                        <time>15 January 2019</time>
+                        <time>28 March 2019</time>
                       </p>
 
-                      <span class="event__title heading--sub"><a class="publication-link" target="_blank" href="#">
-                Full inspection: <strong>Good</strong><span class="nonvisual">Full inspection, PDF - 31 January 2013</span></a>
-                      <div class="event__metadata"><span class="filetype">PDF</span> &ndash;
-                        <!--<span class="filesize">10kb</span>-->Published
-                        <time pubdate>20 February 2019</time>
+                      <span class="event__title heading--sub">
+                        <a class="publication-link" target="_blank" href="#">
+                          Parents say: <strong>75% recommend</strong>
+                        </a>
+                      <div class="event__metadata">Published
+                        <time pubdate>28 March 2019</time>
                       </div>
                       </span>
 
                     </div>
                   </li>
 
-                  <li class="timeline__day        ">
+                  <li class="timeline__day">
+                    <div class="event result">
+
+                      <p class="timeline__date">
+                        <time>28 October 2018</time>
+                      </p>
+
+                      <span class="event__title heading--sub">
+                        <a class="publication-link" target="_blank" href="#">
+                          Parents say: <strong>68% recommend</strong>
+                        </a>
+                      <div class="event__metadata">Published
+                        <time pubdate>28 October 2018</time>
+                      </div>
+                      </span>
+
+                    </div>
+                  </li>
+
+                  <li class="timeline__day">
                     <div class="event">
 
                       <p class="timeline__date">
@@ -168,7 +156,7 @@
                     </div>
                   </li>
 
-                  <li class="timeline__day        ">
+                  <li class="timeline__day">
                     <div class="event">
 
                       <p class="timeline__date">
@@ -186,7 +174,7 @@
                     </div>
                   </li>
 
-                  <li class="timeline__day        ">
+                  <li class="timeline__day">
                     <div class="event">
 
                       <p class="timeline__date">
@@ -204,7 +192,7 @@
                     </div>
                   </li>
 
-                  <li class="timeline__day        ">
+                  <li class="timeline__day">
                     <div class="event">
 
                       <p class="timeline__date">
