(feature) a way to switch the result page version

--- a/app/views/leave-feedback/results/123456-greenwood-high-1.html
+++ b/app/views/leave-feedback/results/123456-greenwood-high-1.html
@@ -337,11 +337,7 @@
   <footer class="footer">
     <div class="container">
       <ul class="footer__links list-inline">
-        <li><a href="#">Terms of use</a></li>
-        <li><a href="#">Copyright</a></li>
-        <li><a href="#">Privacy statement and cookie policy</a></li>
-        <li><a href="#">Ofsted&#039;s privacy notices</a></li>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="123456-greenwood-high-2">Graph version</a></li>
       </ul>
       <div class="footer_crown-copyright">
         <p class="footer__copy-right"><a href="#">&copy; Crown copyright</a></p>
