--- a/app/views/leave-feedback/email-confirmed.html
+++ b/app/views/leave-feedback/email-confirmed.html
@@ -19,6 +19,8 @@ Email confirmed — {{ serviceName }}
 
     <p class="govuk-body">By giving feedback you are helping schools raise their standards. It also helps parents and carers make more informed choices about where to send their children.</p>
 
+    <p class="govuk-body">You can see <a href="/leave-feedback/results/123456-greenwood-high-1">{{ schoolName }}'s feedback</a>.</p>
+
   </div>
 </div>
 {% endblock %}
