(fix) fix email address hint text

--- a/app/views/leave-feedback/sharing-information-consent.html
+++ b/app/views/leave-feedback/sharing-information-consent.html
@@ -35,7 +35,7 @@ What happens with your feedback — {{ serviceName }}
           classes: "govuk-label--m"
         },
         hint: {
-          text: "We’ll ask you to verify this address by clicking a link in an email and also to send you a copy of your feedback."
+          text: "We’ll ask you to verify this address by clicking a link in an email and use it to send you a copy of your feedback."
         },
         id: "email",
         name: "email",
