(feature) link to start page is conditional
for the reports pages:

- on the timeline version, remove the link to the start page
- on the graph version, add a text link to the start page

--- a/app/views/leave-feedback/results/123456-greenwood-high-2.html
+++ b/app/views/leave-feedback/results/123456-greenwood-high-2.html
@@ -377,8 +377,8 @@
               <div class="visible-sm visible-lg">
                 <hr class="separator" />
                 <div class="module views-links">
-                  <h2 class="views-links__title heading--sub">Give us your views</h2>
-                  <a href="/" class="views-link">Parent view survey</a>
+                  <h2 class="views-links__title heading--sub">Give feedback to Ofsted on your child's school</h2>
+                  <p><a href="/">Survey for Greenwood High School</a> open until midday on 17 May 2019.</p>
                 </div>
                 <div class="module sociables">
                   <h2 class="sociables__title heading--sub">Share this page</h2>
@@ -394,8 +394,8 @@
             <div class="col full-width visible-xs">
               <hr class="separator" />
               <div class="module views-links">
-                <h2 class="views-links__title heading--sub">Give us your views</h2>
-                <a href="#" class="views-link" target="_blank">Parent view survey</a>
+                <h2 class="views-links__title heading--sub">Give feedback to Ofsted on your child's school</h2>
+                <p><a href="/">Survey for Greenwood High School</a> open until midday on 17 May 2019.</p>
               </div>
               <div class="module sociables">
                 <h2 class="sociables__title heading--sub">Share this page</h2>
